[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navlib"
version = "0.1.1"
authors = [
    { name = "Jon Glenn Gjevestad" },
]
description = "Library for calculations in navigation and geodesy"
# readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # Add your dependencies here, for example:
    # "numpy>=1.20.0",
]

#[project.urls]
"Homepage" = "https://github.com/jggjevestad/navlib"  # Optional

[tool.hatch.build.targets.wheel]
packages = ["navlib"]